sandbox/output
OneHundredDoors.java:1: error: ';' expected
import java.util.List
                     ^
OneHundredDoors.java:2: error: ';' expected
import java.util.ArrayList
                          ^
2 errors
